--- a/header.css
+++ b/header.css
@@ -10,19 +10,16 @@ body{
 	top:0px;
 	width:1536px;
 	left:0px;
+	background-color:black;
+	
 	
 }
 .header{
-	width:window.innerWidth;
+	width:820px;
 	height:50px;
 	
 	margin:0 auto;
-	text-aligen:center;
-	
-	left:355px;
-	
-	background-color:black;
-	
+	text-aligen:center;	
 	
 }
 .bar{
