--- a/header.css
+++ b/header.css
@@ -2,7 +2,7 @@
 /* CSS Document */
 body{
 	font-family:"Microsoft YaHei";
-	background:url(背景.png) #66f6ff
+	background:url(背景.png)
 }
 .header-bar{
 	position:fixed;
